# sonic-netbox-napalm

./: gns3_client.py  labctl.py  pyproject.toml
configs/: baseline_config_db.json
device-types/: DELL-E3248P.yaml  DELL-E3248PXE.yaml  DELL-S3248T.yaml  DELLEMC-N3248P.yaml  DELLEMC-N3248PXE.yaml  DELLEMC-N3248TE.yaml  DELLEMC-N3248X.yaml  Dell-S4348F.yaml  Dell-S4348T.yaml  Dell-Z9864f-O64.yaml  DellEMC-S5212f-P-25G.yaml  DellEMC-S5224f-P-25G.yaml  DellEMC-S5232f-C32-noX2.yaml  DellEMC-S5232f-C32.yaml  DellEMC-S5232f-C8D48.yaml  DellEMC-S5232f-P-100G.yaml  DellEMC-S5232f-P-10G.yaml  DellEMC-S5232f-P-25G.yaml  DellEMC-S5248f-P-10G.yaml  DellEMC-S5248f-P-25G-DPB.yaml  DellEMC-S5248f-P-25G.yaml  DellEMC-S5296f-P-10G.yaml  DellEMC-S5296f-P-25G-DPB.yaml  DellEMC-S5296f-P-25G.yaml  DellEMC-S5448f-C48O8.yaml  DellEMC-Z9264f-C64.yaml  DellEMC-Z9264f-C8D112.yaml  DellEMC-Z9264f-Q64.yaml  DellEMC-Z9332f-C32.yaml  DellEMC-Z9332f-C64O16SH.yaml  DellEMC-Z9332f-M-O16C64.yaml  DellEMC-Z9332f-O16C64.yaml  DellEMC-Z9332f-O16C64SH.yaml  DellEMC-Z9332f-O32.yaml  DellEMC-Z9432f-O32.yaml  DellEMC-Z9432f-T64C64O8-DPB.yaml  DellEMC-Z9664f-O64.yaml  Force10-S6000-Q20S48.yaml  Force10-S6000-Q24S32.yaml  Force10-S6000-Q28S16.yaml  (+6 more)
labkit/: __init__.py  config_gen.py  evpn.py  hosts.py  interfaces.py  lldp.py  pfsense.py  sonic_rest.py  ssh.py  topo.py  tpcm.py
napalm_sonic/: __init__.py  constants.py  sonic.py
netbox_sonic_discovery/: __init__.py  discovery.py  models.py  navigation.py  template_content.py  urls.py  views.py
ref/: port_configs_442.txt  port_configs_451.txt
(+27 files in other folders)
