[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napalm-sonic"
version = "0.1.0"
description = "NAPALM driver for Dell Enterprise SONiC (RESTCONF)"
requires-python = ">=3.10"
dependencies = [
    "napalm>=4.0.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
include = ["napalm_sonic*", "netbox_sonic_discovery*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
